<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateSessionActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="310dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:text=" Neue Sessiong"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sessionNameView"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Session name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:paddingLeft="0.0dip"
        android:paddingTop="0.0dip"
        android:paddingRight="0.0dip"
        android:paddingBottom="0.0dip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/stundenView"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:ems="10"
            android:hint=" Stunden"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/minutenView"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:ems="10"
            android:hint=" Minuten"
            android:inputType="numberSigned" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="310dp"
        android:layout_height="20dp"
        android:text="   Zu erledigen bis:"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/dateView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <CalendarView
        android:id="@+id/dateView"
        android:layout_width="310dp"
        android:layout_height="333dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/createSessionButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/createSessionButton"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:onClick="createSession"
        android:text="Erstelle Session"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>