...
        android:layout_width="164dp"
        android:layout_height="64dp"
        android:layout_marginBottom="20dp"
        android:onClick="startStop"
        android:text="START"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/deleteButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="LÖSCHEN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="152dp" />

    <TextView
...
